--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- header -->
-    <header class="p-1 flex backdrop-blur-md shadow-md w-full fixed top-0 left-0 right-0 z-10">
+    <header class="flex shadow-md w-full fixed top-0 left-0 right-0 z-10">
         <nav class="w-full px-6">
             <ul class="inline-flex justify-between w-full">
                 <li class="flex self-center">
